Solved z-index issue with sticky navbar; solved photo opacity problem with RGBA

--- a/index.css
+++ b/index.css
@@ -82,6 +82,7 @@
   top: 0px;
   width: 1600px;
   display: flex;
+  z-index: 100;
 }
 
 /* STICKY LOGO */
@@ -221,8 +222,7 @@ input:checked ~ .menu-content {
 }
 
 .bg_rectangle_24 {
-  opacity: 0.8;
-  background-color: rgb(65, 79, 107);
+  background-color: rgb(65, 79, 107, 0.8);
   position: absolute;
   left: 8px;
   top: 1700px;
@@ -234,7 +234,6 @@ input:checked ~ .menu-content {
 .set {
   border: 0;
   display: none;
-  opacity: 0;
 }
 .images_by_4 {
   padding-top: 12px;
